--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLSN ccontact form</title>
     <meta name="description" content="weTSR is a program dedicated to parents, we train you to be a therapist for your child, we support you through the huddles associated with it and we support you!.">
-  <link rel="icon" type="image/png" href="logo.jpeg"> 
+  <link rel="icon" type="image/png" href="logo.svg"> 
     
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
