--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
  <div class="header">
- <img src="logo.svg" alt="Logo" class="logo">
+ <img src="logo.svg" alt="Logo" class="logo" style="height: 200px; width: 200px;">
  </div>
       
 
