--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p id="demo"></p>
 
 <div id="body" class="body">
-  <form action="forms.php" method="post">
+   <form  action="/submit-form" method="post">
     <label for="fullname"> <i class="fas fa-user"></i> Full Name </label>
     <input type="text" id="fname" name="fullname" placeholder="Full Name..">
 
@@ -150,7 +150,7 @@
 
 
 
-
+ <script src="index.js"></script>
 <script src="form.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
